Fixed horizontal scroll

--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  width: 100vw;
   height: 100vh;
   background-image: url("../images/cover.jpg");
   background-repeat: no-repeat;
